# Simple_study_projects

./: README.md
Calculator/: CMakeLists.txt  Calculator.h
FactoryMethod/: CMakeLists.txt  Logistics.h  RoadLogistic.h  SeaLogistic.h  Ship.h  Transport.h  Truck.h  main.cpp
Leetcode_alg/10. Regular Expression Matching/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/3Sum/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/4Sum/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Bomb/: CMakeLists.txt  Optimal_Solution.h  Solution.h  main.cpp
Leetcode_alg/Combination Sum/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Container With Most Water/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Count and Say/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Determine if String Halves Are Alike/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Divide two integers/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Extra Characters in a String/: CMakeLists.txt  Solution.h  main.cpp
Leetcode_alg/Find First and Last Position of Element in Sorted Array/: CMakeLists.txt  (+2 more)
Snake_Game/: CMakeLists.txt  Snake.h  main.cpp
aoc/: main.cpp
libraries/: README.md
operator_overloading/: CMakeLists.txt  README.md
qt_calculator-master/: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.h  Counter.pro  main.cpp  mainwidnow.h
qt_notepad-master/: .gitignore  CMakeLists.txt
qt_notepad-master/src/: Custom.cpp  Custom.h  Dark.qss  Highlighter.cpp  Highlighter.h  fileTabWidget.cpp  fileTabWidget.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  multiple_unsaved_files.cpp  multiple_unsaved_files.h  multiple_unsaved_files.ui  qt_notepad.pro  resources.qrc  rules.xml  textedit.cpp  textedit.h
qt_xml-master/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Parser.cpp  Parser.h
(+111 files in other folders)
